# rive

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
crates/rive-cli/: Cargo.toml
crates/rive-cli/src/: compiler.rs  lib.rs  main.rs  pipeline.rs  utils.rs
crates/rive-cli/src/commands/: build.rs  check.rs  clean.rs  init.rs  mod.rs  new.rs  run.rs
crates/rive-cli/tests/: test_cli.rs
crates/rive-codegen/: Cargo.toml
crates/rive-codegen/src/: codegen.rs  codegen_control_flow.rs  lib.rs
crates/rive-codegen/src/generator/: control_flow.rs  core.rs  expressions.rs  inline.rs  labels.rs  mod.rs  patterns.rs  statements.rs  utils.rs
crates/rive-codegen/src/generator/expressions/: calls.rs  collections.rs  literals.rs  methods.rs  mod.rs  nullable.rs  operators.rs
crates/rive-codegen/src/generator/expressions/methods/: list.rs  map.rs  primitives.rs
crates/rive-codegen/src/generator/statements/: control.rs  mod.rs  variables.rs
crates/rive-codegen/src/generator/types/: conversion.rs  mod.rs
crates/rive-codegen/src/generator/utils/: mod.rs  operators.rs
crates/rive-codegen/tests/: test_codegen.rs
crates/rive-core/: Cargo.toml
crates/rive-core/src/: error.rs  lib.rs  span.rs  types.rs
crates/rive-core/src/type_system/: memory_strategy.rs  mod.rs  registry.rs  type_id.rs  type_kind.rs  type_metadata.rs
crates/rive-core/tests/: test_span.rs  test_type_system.rs
crates/rive-ir/: Cargo.toml
crates/rive-ir/src/: builder.rs  display.rs  expression.rs  lib.rs  lowering.rs  lowering_control_flow.rs  module.rs  statement.rs
crates/rive-ir/src/builder/: block.rs  expression.rs  mod.rs  module.rs
crates/rive-ir/src/display/: block.rs  expression.rs  mod.rs  module.rs  operator.rs  statement.rs
crates/rive-ir/src/expression/: methods.rs  mod.rs  operators.rs  types.rs
crates/rive-ir/src/lowering/: control_flow.rs  core.rs  expressions.rs  helpers.rs  match.rs  mod.rs  program.rs  statements.rs
crates/rive-ir/src/optimizer/: constant_folding.rs  dead_code_elimination.rs  mod.rs  pass.rs
crates/rive-ir/src/statement/: methods.rs  mod.rs  types.rs
crates/rive-lexer/: Cargo.toml
crates/rive-lexer/src/: lib.rs  token.rs
crates/rive-lexer/tests/: test_lexer.rs
crates/rive-parser/: Cargo.toml
crates/rive-parser/src/: ast.rs  control_flow.rs  lib.rs  parser.rs  parser_control_flow.rs
crates/rive-parser/src/parsing/: control_flow.rs  expressions.rs  functions.rs  helpers.rs  mod.rs  parser.rs  primary.rs  statements.rs  types.rs
crates/rive-parser/tests/: test_collection_literals.rs  test_enum.rs  test_parser.rs  test_types.rs
crates/rive-semantic/: Cargo.toml
crates/rive-semantic/src/: lib.rs  symbol_table.rs  type_checker.rs  type_checker_control_flow.rs
crates/rive-semantic/src/checker/: control_flow.rs  core.rs  expressions.rs  helpers.rs  loops.rs  mod.rs  patterns.rs  program.rs  statements.rs
crates/rive-semantic/src/checker/expressions/: calls_arrays.rs  mod.rs  nullable.rs  operators.rs
crates/rive-semantic/tests/: test_basic.rs  test_blocks.rs  test_collections.rs  test_elvis.rs  test_null_safety.rs  test_safe_call.rs  test_semantic.rs
crates/rive-semantic/tests/common/: mod.rs
crates/rive-utils/: Cargo.toml
crates/rive-utils/src/: config.rs  lib.rs
crates/rive-utils/tests/: test_config.rs
