[package]
name = "rive-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rive-core = { path = "../rive-core" }
rive-parser = { path = "../rive-parser" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
